force-app/main/default/objects/redwing__User_Certification__c/redwing__User_Certification__c.object-meta.xml
<CustomObject>
    <description>Hosts user external certification information.</description>
    <label>User Certification</label>
    <nameField>
        <displayFormat>UC-{000000}</displayFormat>
        <label>User Certification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Certifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>