force-app/main/default/objects/redwing__User_Certification__c/fields/redwing__Certification_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Certification_Name__c</fullName>
    <label>Certification Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>