force-app/main/default/objects/redwing__User_Certification__c/fields/redwing__Certification_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Certification_URL__c</fullName>
    <label>Certification URL</label>
    <type>Url</type>
</CustomField>