force-app/main/default/objects/redwing__User_Certification__c/fields/redwing__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>