force-app/main/default/objects/redwing__User_Certification__c/fields/redwing__License_Number__c.field-meta.xml
<CustomField>
    <fullName>redwing__License_Number__c</fullName>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>